fix: bottom nav의 z-index를 3으로 둠으로써 meetingdetail에서 itemcard와 bottom nav가 겹치는 문제 해결

--- a/src/components/domain/meeting/MeetingItemCard.module.scss
+++ b/src/components/domain/meeting/MeetingItemCard.module.scss
@@ -11,8 +11,6 @@
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 1;
-
     width: 72px;
     height: 100%;
     cursor: pointer;
